[package]
authors = ["Laurentiu Nicola <lnicola@dend.ro>"]
name = "rusty-bin"
version = "0.1.0"

[dependencies]
chrono = "0.4"
diesel = { version = "0.15", features = ["sqlite", "uuid", "chrono"] }
diesel_codegen = { version = "0.15", features = ["sqlite"] }
dotenv = "0.10"
lazy_static = "0.2"
libsqlite3-sys = { version = "0.8", features = ["bundled"] }
r2d2 = "0.7"
r2d2-diesel = "0.15"
rocket = "0.3"
rocket_codegen = "0.3"
serde = "1.0"
serde_derive = "1.0"
syntect = { version = "1.7", features = ["static-onig"] }
uuid = { version = "0.5", features = ["v4"] }

[dependencies.rocket_contrib]
version = "0.3"
default-features = false
features = ["tera_templates"]
