[package]
authors = ["Laurentiu Nicola <lnicola@dend.ro>"]
name = "rusty-bin"
version = "0.1.0"

[dependencies]
chrono = "0.4"
diesel = { version = "1.3", default-features = false, features = ["r2d2", "sqlite", "uuid", "chrono"] }
dotenv = "0.13"
lazy_static = "1.0"
libsqlite3-sys = { version = "0.9", features = ["bundled"] }
rocket = "0.3"
rocket_codegen = "0.3"
serde = "1.0"
serde_derive = "1.0"
syntect = "2.1"
uuid = { version = "0.6", features = ["v4"] }

[dependencies.rocket_contrib]
version = "0.3"
default-features = false
features = ["tera_templates"]
